--- a/assets/custom.css
+++ b/assets/custom.css
@@ -31,7 +31,7 @@ h2 {
   font-family: Amatic;
 }
 
-.sd-slide::before {
+/**.sd-slide::before {
   content: "";
   position: absolute;
   left: 0;
@@ -56,7 +56,7 @@ h2 {
   background-position: bottom right;
   z-index: -1;
 }
-
+*/
 .title {
   justify-content: end;
 }
@@ -116,4 +116,13 @@ h2 {
 
 .ovhcloud-world h2 {
   color: #000;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: rgb(0, 0, 0);
+  text-align: center;
 }
