--- a/plugins/footer/footer.css
+++ b/plugins/footer/footer.css
@@ -5,4 +5,10 @@
   width: 100%;
   color: rgb(0, 0, 0);
   text-align: center;
+  display: flex;
+  align-items: center;
+}
+
+.footer-center {
+  flex-grow: 1;
 }
