refacto: ♻️ some formating

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -87,7 +87,7 @@ h2 {
 .ovhcloud-world {
   background-image: url(images/ovhcloud-world.png);
   background-size: 95%;
-  background-repeat:no-repeat;
+  background-repeat: no-repeat;
   background-position: center;
   display: block;
 }
@@ -111,7 +111,7 @@ h2 {
  * Global styles
  ****/
 .img-right {
-  position: absolute; 
+  position: absolute;
   right: 20px;
 }
 
@@ -131,11 +131,11 @@ h2 {
   position: relative;
   top: 65%;
   left: 25%;
-  font-size: 300%;  
+  font-size: 300%;
 }
 
 .love-image-author {
-  color: #ffff;
+  color: #fff;
   position: absolute;
   bottom: 30px;
   right: 2px;
@@ -145,10 +145,10 @@ h2 {
 /****
  * CSS Styles for _CLI.sdf slide
  ****/
- .cli-image-author-ubuntu {
+.cli-image-author-ubuntu {
   color: #fff;
 }
 
 .cli-image-author-language {
   color: black;
- }
+}
