--- a/plugins/footer/footer.css
+++ b/plugins/footer/footer.css
@@ -1,3 +1,6 @@
+/****
+ * CSS for center element
+ ****/
 .footer {
   position: fixed;
   left: 0;
@@ -5,4 +8,26 @@
   width: 100%;
   color: rgb(0, 0, 0);
   text-align: center;
+}
+
+/****
+ * CSS for author element
+ ****/
+.author-footer {
+  float: right; 
+  font-size: 0.4em;
+}
+
+/****
+ * Predefined black color
+ ****/
+.black-text-color-footer {
+  color: black;
+}
+
+/****
+ * Predefined white color
+ ****/
+.white-text-color-footer {
+  color: white;
 }
