--- a/plugins/footer/footer.css
+++ b/plugins/footer/footer.css
@@ -8,24 +8,29 @@
   width: 100%;
   color: rgb(0, 0, 0);
   text-align: center;
- }
+}
 
- /****
+/****
   * CSS for OVHcloud logo
   ****/
 .ovhcloud-footer {
-  position: absolute; 
-  left: 0%; 
-  top: 50%;  
+  position: absolute;
+  left: 0%;
+  top: 50%;
   transform: translateY(-50%);
 }
 
- /****
+.ovhcloud-footer img {
+  background-color: #fff;
+  padding: 2px;
+}
+
+/****
   * CSS for Open Source Experience logo
   ****/
 .osxp-footer {
-  margin: 0 auto; 
-  width: 100px; 
+  margin: 0 auto;
+  width: 100px;
   text-align: center;
 }
 
