--- a/plugins/footer/footer.css
+++ b/plugins/footer/footer.css
@@ -27,9 +27,9 @@
 }
 
 /****
-  * CSS for Open Source Experience logo
+  * CSS for footer logo
   ****/
-.osxp-footer {
+.slide-footer {
   margin: 0 auto;
   width: 100px;
   text-align: center;
