--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,4 @@
-:root {
+/*:root {
   --sd-heading1-size: 6.5vw;
   --sd-heading1-line-height: 1;
   --sd-heading2-size: 5vw;
@@ -28,9 +28,11 @@ h1,
 h2 {
   font-family: Amatic;
 }
+*/
 
-.title {
-  justify-content: end;
+
+h2 {
+  font-size: 3vw;
 }
 
 .slide-text {
@@ -62,7 +64,7 @@ h2 {
 }
 
 .lego {
-  background-image: url(images/lego.jpeg);
+  background-image: url(../images/lego.jpeg);
   background-size: cover;
   display: block;
 }
@@ -75,7 +77,7 @@ h2 {
  * CSS Styles for _demos.sdf slide
  ****/
 .demos {
-  background-image: url(images/demos.jpg);
+  background-image: url(../images/demos.jpg);
   background-size: cover;
   display: block;
 }
@@ -96,7 +98,7 @@ h2 {
 }
 
 .ovhcloud-world {
-  background-image: url(images/ovhcloud-world.png);
+  background-image: url(../images/ovhcloud-world.png);
   background-size: 95%;
   background-repeat: no-repeat;
   background-position: center;
@@ -104,8 +106,11 @@ h2 {
 }
 
 .ovhcloud-world h2 {
-  color: #000;
+  color: #260691;
   text-align: left;
+  position: absolute;
+  top: 10%;
+  left: 5%;
 }
 
 .graal h2 {
@@ -114,7 +119,6 @@ h2 {
   position: absolute;
   top: 35%;
   left: 50%;
-  font-size: 300%;
   backdrop-filter: blur(5px) saturate(80%);
 }
 
@@ -166,9 +170,14 @@ h2 {
   font-size: medium;
 }
 
+
+.thanks-slide h2 {
+  font-size: 5vw;
+  position: absolute;
+  top: 5%
+}
+
 /** gestion des couleurs du footer **/
 .sd-slide.love.sd-current ~ .footer,
-.sd-slide.lego.sd-current ~ .footer,
-.sd-slide.demos.sd-current ~ .footer {
-  color: #fff;
-}
+.sd-slide.lego.sd-current ~ .footer
+
