--- a/assets/css/devoxx-fr-2024/theme.css
+++ b/assets/css/devoxx-fr-2024/theme.css
@@ -52,10 +52,18 @@ i,
   font-family: "Open Sans Italic";
 }
 
+
+
 h1,
 h2 {
   font-family: "Pirulen";
 }
+
+h1 {
+  font-size:4vw;
+  text-align: right;
+}
+
 
 .sd-slide {
   background-color: var(--color-bg-alternate);
