--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -117,7 +117,8 @@ h2 {
 
 .ovhcloud-world {
   background-image: url(../images/ovhcloud-world.png);
-  background-size: 95%;
+  background-size: cover;
+  display: block;
   background-repeat: no-repeat;
   background-position: center;
   display: block;
@@ -144,10 +145,16 @@ h2 {
 /****
  * CSS Styles for _merciii.sdf slide
  ****/
+ .love {
+  background-image: url(../images/love.jpg);
+  background-size: cover;
+  display: block;
+}
+
 .love h2 {
   color: #fff;
   position: relative;
-  top: 65%;
+  top: 40%;
   left: 25%;
   font-size: 300%;
 }
