feat: 🖼️ Devoxx Belgium

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -115,23 +115,6 @@ h2 {
   color: black;
 }
 
-.ovhcloud-world {
-  background-image: url(../images/ovhcloud-world.png);
-  background-size: cover;
-  display: block;
-  background-repeat: no-repeat;
-  background-position: center;
-  display: block;
-}
-
-.ovhcloud-world h2 {
-  color: #260691;
-  text-align: left;
-  position: absolute;
-  top: 5%;
-  left: 5%;
-}
-
 .graal h2 {
   color: #000;
   vertical-align: middle;
@@ -145,22 +128,45 @@ h2 {
 /****
  * CSS Styles for _merciii.sdf slide
  ****/
- .love {
-  background-image: url(../images/love.jpg);
+.love {
+  background: url(../images/love.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  display: block;
 }
 
-.love h2 {
-  color: #fff;
-  position: relative;
-  top: 40%;
-  left: 25%;
-  font-size: 300%;
+.ai-everywhere {
+  background: url(../images/buzz-ai.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-.love-image-author a {
-  color: #fff;
+.java {
+  background: url(../images/lego.jpeg) no-repeat center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.demos {
+  background: url(../images/demos.jpg) no-repeat center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.ovhcloud {
+  background: url(../images/ovhcloud-world.png) no-repeat center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: contain;
+  
 }
 
 /****
